<resources>

    <string name="app_name">Lab0203</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_relative_layout_example">RelativeLayoutExample</string>
	<string name="top">TOP</string>
	<string name="bottom">BOTTOM</string>
	<string name="left">LEFT</string>
	<string name="right">RIGHT</string>
	<string name="above">ABOVE</string>
	<string name="below">BELOW</string>
	<string name="center">CENTER</string>
		
</resources>